# 20230328-androidapp

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zw/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  java_WasmEdge.cpp  java_WasmEdge.h  native-lib.cpp  wasmedge_lib.cpp
app/src/main/java/com/zw/app/: App.java  LaunchActivity.kt  WasmEdge.java
app/src/main/java/com/zw/app/activity/: Test1Activity.java  Test2Activity.java  WasmEdgeActivity.kt
app/src/main/java/com/zw/app/util/: ColorUtil.java
app/src/main/java/com/zw/app/view/: AcousticInfoView.java  MagicView.java
app/src/main/java/org/wasmedge/native_lib/: NativeLib.kt
app/src/main/res/layout/: activity_launch.xml  activity_test1.xml  activity_test2.xml  activity_wasm_edge.xml
app/src/main/res/values/: attrs.xml  my_colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zw/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
